<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textOperandLabel"
        android:layout_width="108dp"
        android:layout_height="27dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="30dp"
        android:text="@string/calcOperandLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/inputFirstOperand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputFirstOperand"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/firstHint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/inputSecondOperand"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOperandLabel" />

    <EditText
        android:id="@+id/inputSecondOperand"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/secondHint"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputFirstOperand" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:entries="@array/operationChoice"
        app:layout_constraintBottom_toTopOf="@+id/textResultLabel"
        app:layout_constraintEnd_toStartOf="@+id/btnCalc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSecondOperand" />

    <Button
        android:id="@+id/btnCalc"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/calcBtn"
        app:layout_constraintBottom_toTopOf="@+id/textResultLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/inputSecondOperand" />

    <TextView
        android:id="@+id/textResultLabel"
        android:layout_width="51dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/calcResultLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="200dp"
        android:text="@string/calcResult"
        android:textSize="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResultLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>